@startuml models

left to right direction
skinparam roundcorner 0
skinparam linetype ortho

skinparam class {
  FontColor automatic
  BackgroundColor #f2f2f2
  HeaderBackgroundColor SteelBlue
  ArrowColor CornflowerBlue
  BorderColor #f2f2f2
}

!define primary_key(x) <b><color:DarkGoldenRod><&key></color> x</b>
!define foreign_key(x) <color:Gray><&key></color> x
!define unique_column(x) <color:IndianRed><&media-stop></color><i> x</i>
!define column(x) <color:LightBlue><&media-stop></color> x
!define table(x) entity x << (T, white) >>

table(image) {
  primary_key(id): int
  unique_column(name): text
  unique_column(url): text
  column(is_owned): bool
  column(created_at): timestamptz
}

table(product) {
  primary_key(id): int
  foreign_key(category_id): int
  column(archived): bool
  column(created_at): timestamptz
}

table(product_translation) {
  primary_key(id): int
  foreign_key(product_id): int
  unique_column(language): char
  column(name): text
  column(description): text
  column(preview_description): text
  column(text): text
}

table(product_edition) {
  primary_key(id): int
  foreign_key(product_id): int
  column(name): text
  column(price): numeric
  column(available): bool
}

table(product_image) {
  foreign_key(product_id): int
  foreign_key(image_id): int
}

table(product_tag) {
  foreign_key(product_id): int
  foreign_key(tag_id): int
}

table(category) {
  primary_key(id): int
  foreign_key(parent_id): int
  column(created_at): timestamptz
}

table(category_translation) {
  primary_key(id): int
  foreign_key(category_id): id
  unique_column(language): char
  column(name): text
  column(text): text
}

table(order) {
  primary_key(id): int
  column(state): order_state
  column(email): text
  column(phone_number): text
  column(first_name): text
  column(last_name): text
  column(middle_name): text
  column(language): char
  column(price): decimal
  column(country): text
  column(region): text
  column(city): text
  column(address): text
  column(zip_code): text
  column(created_at): timestamptz
}

table(order_item) {
  primary_key(id): int
  foreign_key(order_id): int
  foreign_key(product_id): int
  column(name): text
  column(edition_name): text
  column(price): decimal
  column(amount): int
  column(total_price): decimal
}

table(tag) {
  primary_key(id): int
  foreign_key(parent_id): int
  column(created_at): timestamptz
}

table(tag_translation) {
  primary_key(id): int
  foreign_key(tag_id): int
  unique_column(language): char
  column(name): text
}

product ||--|{ product_translation
product ||--|{ product_edition
product ||--|{ product_image
product ||--|{ product_tag

product_image }|--|| image
product_tag }|--|| tag

category ||--|{ category_translation
category ||-|{ product

order ||-|{ order_item
order_item }|--|| product

tag ||--|{ tag_translation


@enduml
